complited character-selector

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Character name</h5>
-          <p class="card-text">Character's brief description...</p>
+          <h5 class="card-title" id="name">Character name</h5>
+          <p class="card-text" id="text">Character's brief description...</p>
         </div>
       </div>
     </div>
